Email Verification Added

--- a/template/register.html
+++ b/template/register.html
@@ -40,7 +40,7 @@
         }
 
         .right {
-            background: linear-gradient(to bottom, midnightblue, steelblue);
+            background: linear-gradient(to bottom, darkgreen, forestgreen);
             height: 100%;
             color: white;
             text-align: center;
@@ -66,14 +66,14 @@
         }
 
         input[type="submit"] {
-            background-color: midnightblue;
+            background-color: darkgreen;
             color: white;
             cursor: pointer;
             width: 40%;
         }
 
         input[type="submit"]:hover {
-            background-color: steelblue;
+            background-color: forestgreen;
         }
 
         #acc{
