--- a/template/pay.html
+++ b/template/pay.html
@@ -141,9 +141,9 @@
                     "key": "rzp_test_NMRA7qyGBTM6Ei", // Enter the Key ID generated from the Dashboard
                     "amount": '{{payment.amount}}', // Amount is in currency subunits. Default currency is INR. Hence, 50000 refers to 50000 paise
                     "currency": "INR",
-                    "name": "Ecomere.pvt ltd",
+                    "name": "SpeedySnackShack",
                     "description": "Test Transaction",
-                    "image": "https://example.com/your_logo",
+                    "image": "{% static 'images/logo.png' %}",
                     "order_id": "{{payment.id}}", //This is a sample Order ID. Pass the `id` obtained in the response of Step 1
                     "handler": function (response){
                        // alert(response.razorpay_payment_id);
