--- a/template/editprofile.html
+++ b/template/editprofile.html
@@ -110,6 +110,7 @@
                                   <ul class="dropdown-menu">
                                   <li><a class="dropdown-item" href="/profile">Profile</a></li>
                                   <li><a class="dropdown-item" href="#">Cart</a></li>
+                                  <li><a class="dropdown-item" href="/orders">My Orders</a></li>
                                   <li><hr class="dropdown-divider mt-1 mb-1"></li>
                                   <li><a class="dropdown-item" href="/logout">Logout</a></li>
                                   </ul>
