--- a/template/placeorder.html
+++ b/template/placeorder.html
@@ -86,10 +86,6 @@
                             <a class="nav-link active" aria-current="page" href="/store">Store</a>
                           </li>
                         </ul>
-                          <form class="d-flex" role="search" method="GET">
-                            <input class="form-control" type="search" placeholder="Looking for something specific?" aria-label="Search" name="q">
-                            <button class="btn btn-outline-success" type="submit">Search</button>
-                          </form>
                          
                           {% if user.is_authenticated %}
                           <ul class="navbar-nav">
@@ -107,6 +103,7 @@
                                   <ul class="dropdown-menu">
                                   <li><a class="dropdown-item" href="/profile">Profile</a></li>
                                   <li><a class="dropdown-item" href="/cart">Cart</a></li>
+                                  <li><a class="dropdown-item" href="/orders">My Orders</a></li>
                                   <li><hr class="dropdown-divider"></li>
                                   <li><a class="dropdown-item" href="/logout">Logout</a></li>
                                   </ul>
@@ -131,10 +128,12 @@
               <div class="row mt-4">
                   <div class="col-md-9">
                       <div class="mt-5 p-3">
-                        {% for i in data %}  
+                        {% for i in person %}  
                         <h4>Customer details & Product details</h4><hr>
-                        <p><strong>Username: </strong> {{i.first_name}} {{i.last_name}} </p>
-                        <p><strong>Email ID: </strong> {{i.email}}</p>
+                        <p><strong>Username: </strong> {{i.user_id.first_name}} {{i.user_id.last_name}} </p>
+                        <p><strong>Email ID: </strong> {{i.user_id.email}}</p>
+                        <p><strong>Mobile Number: </strong> {{i.mobile}}</p>
+                        <p><strong>Delivery Address: </strong> {{i.address}}</p>
                         {% endfor %}
                       </div>
                       <div class="mt-3 p-3">
