--- a/template/product_details.html
+++ b/template/product_details.html
@@ -89,6 +89,7 @@
                                   <ul class="dropdown-menu">
                                   <li><a class="dropdown-item" href="#">Profile</a></li>
                                   <li><a class="dropdown-item" href="/cart">Cart</a></li>
+                                  <li><a class="dropdown-item" href="/orders">My Orders</a></li>
                                   <li><hr class="dropdown-divider mt-1 mb-1"></li>
                                   <li><a class="dropdown-item" href="/logout">Logout</a></li>
                                   </ul>
